# tentakels-attacking-3

./: .clang-format  .gitignore  CMakeLists.txt  dependencies.cmake  main.cpp  project_options.cmake  vcpkg.json
src/alias/: CMakeLists.txt
src/alias/include/alias/: AliasApp.hpp  AliasConstants.hpp  AliasCustomRaylib.hpp  AliasEvent.hpp  AliasHelper.hpp  AliasLogic.hpp  AliasUi.hpp  AliasUiLib.hpp  AliasUtils.hpp
src/app/: AliasManager.cpp  AppContext.cpp  AssetManager.cpp  CMakeLists.txt  G_Save_Enum.cpp  G_Save_IO.cpp  LanguageManager.cpp  PlayerCollection.cpp  PlayerData.cpp  SoundManager.cpp
src/app/include/app/: AliasApp.hpp  AliasManager.hpp  AppContext.hpp  AssetManager.hpp  AssetType.hpp  G_Global.hpp  G_Save_Enum.hpp  G_Save_IO.hpp  G_Version.hpp  HelperSaveIO.hpp  LanguageManager.hpp  PlayerCollection.hpp  PlayerData.hpp  SaveState.hpp  SoundManager.hpp  SoundType.hpp
src/app_context/: AppContext.cpp  CMakeLists.txt
src/app_context/include/: AppContext.h  AppContext.hpp
src/constants/: CConstants.cpp  CGameEvents.cpp  CMakeLists.txt  CWindow.cpp  ConfigEnum.cpp  ConfigIO.cpp  G_ConfigEnum.cpp  G_ConfigIO.cpp  G_Config_Enum.cpp  G_Config_IO.cpp  HelperGameEvents.cpp  HelperWindow.cpp
src/constants/include/constants/: CConfigEnum.hpp  CConfigIO.hpp  CConstants.hpp  CFight.hpp  CFiles.hpp  CFleet.hpp  CGameEventTypes.hpp  CGameEvents.h  CGameEvents.hpp  CGlobal.hpp  CPlanet.hpp  CPlayer.hpp  CResolution.hpp  CSound.hpp  CTextProcessing.hpp  CWindow.h  CWindow.hpp  CWorld.hpp  ConfigIO.hpp  G_ConfigEnum.hpp  G_ConfigIO.hpp  G_Config_Enum.hpp  G_Config_IO.hpp  G_Fight.hpp  G_Fleet.hpp  G_Game_Events.hpp  G_Global.hpp  G_Planet.hpp  G_Player.hpp  G_Sound.hpp  G_Version.hpp  G_Window.hpp  G_World.hpp  HelperConfigIO.hpp  HelperGameEvents.hpp  HelperWindow.hpp
src/event/: CMakeLists.txt  EventManager.cpp
src/event/include/event/: EventGeneral.hpp  EventGenerel.hpp  EventListener.hpp  EventMain.hpp  EventManager.hpp  EventsUI.hpp  GenerelEvents.hpp  UIEvents.hpp
src/helper/: CMakeLists.txt  HAssetManager.cpp  HColors.cpp  HConfigEnum.cpp  HErrorLog.cpp  HFightResult.cpp  HFocusEvents.cpp  HGalaxy.cpp  HGeneral.cpp  HInput.cpp  HLaguageManager.cpp  HMergeResult.cpp  HPlayerCollection.cpp  HPlayerData.cpp  HPrint.cpp  HRandom.cpp  HSoundManager.cpp  HTextProcessing.cpp  HVector2Operator.cpp  HVersion.cpp  SaveLoadFile.cpp
src/helper/include/helper/: HAssetManager.hpp  HAssetType.hpp  HColors.h  HColors.hpp  HConcepts.hpp  HConfigEnum.hpp  HErrorLog.hpp  HFightResult.hpp  HFleetResult.hpp  HFocusEvents.hpp  HGalaxy.hpp  HGameEventTypes.hpp  HGeneral.hpp  HInput.hpp  HLaguageManager.h  HLaguageManager.hpp  HLayeredVector.hpp  HLogicAlias.hpp  HLohmann.hpp  HMergeResult.hpp  HPlayerCollection.h  HPlayerCollection.hpp  HPlayerData.hpp  HPrint.h  HPrint.hpp  HRandom.hpp  HResolution.hpp  HSoundManager.h  HSoundManager.hpp  HSoundType.hpp  HTextProcessing.hpp  HUIAlias.hpp  HVec2.hpp  HVector2Operator.hpp  HVersion.hpp  SaveLoadFile.hpp  Vec2.hpp
src/logic/: BlackHole.cpp  CMakeLists.txt  Fleet.cpp  Galaxy.cpp  GalaxyManager.cpp  GameManager.cpp  GetTarget.cpp  ManagerGalaxy.cpp  ManagerGame.cpp  Planet.cpp  Player.cpp  RepresentationGenerator.cpp  SpaceObject.cpp  TargetPoint.cpp
src/logic/include/logic/: BlackHole.hpp  CopyGalaxyType.hpp  Fleet.hpp  Galaxy.h  Galaxy.hpp  GalaxyManager.h  GameManager.h  GetTarget.hpp  ManagerGalaxy.hpp  ManagerGame.hpp  Planet.hpp  Player.hpp  PlayerType.hpp  RepresentationGenerator.hpp  SpaceObject.h  SpaceObject.hpp  TargetPoint.hpp
src/ui/: AppSettings.cpp  CMakeLists.txt  CellPopUp.cpp  ColorCellPopUp.cpp  CreditTable.cpp  Credits.cpp  DeletePlayerPopUp.cpp  FightResultPopup.cpp  FleetTable.cpp  GalaxyAndSlider.cpp  GameEventSettings.cpp  GameSettings.cpp  HSceneCreditTable.cpp  HSceneFleetTable.cpp  HSceneGalaxyAndSlider.cpp  HSceneGameEventSettings.cpp  HScenePlanetTable.cpp  HSceneSettings.cpp  HSceneSliderAndInputLine.cpp  HSceneTest.cpp  Intro.cpp  Logos.cpp  MainMenu.cpp  MainScene.cpp  ManagerPopUp.cpp  ManagerScene.cpp  ManagerUI.cpp  MessagePopUp.cpp  NewGameParameter.cpp  NewGamePlayer.cpp  PlanetTable.cpp  PopUpCell.cpp  PopUpCellColor.cpp  PopUpInput.cpp  PopUpInputColor.cpp  PopUpInputDouble.cpp  PopUpInputString.cpp  PopUpInputUSize.cpp  PopUpManager.cpp  PopUpMessage.cpp  (+32 more)
src/ui/include/ui/: AllPopUp.hpp  AppSettings.h  ColorCellPopUp.h  DeletePlayerPopUp.h  FightResultPopup.h  FleetTable.h  GalaxyAndSlider.h  GameEventSettings.h  HSceneCreditTable.hpp  HSceneFleetTable.hpp  HSceneGalaxyAndSlider.hpp  HSceneGameEventSettings.hpp  HScenePlanetTable.hpp  HSceneSettings.hpp  HSceneSliderAndInputLine.hpp  HSceneTestScene.hpp  Intro.h  Logos.h  MainScene.h  ManagerPopUp.h  ManagerPopUp.hpp  ManagerScene.hpp  ManagerUI.hpp  NewGameParameter.h  PlanetTable.h  PopUpAll.hpp  PopUpCell.hpp  PopUpCellColor.hpp  PopUpExtra.hpp  PopUpInput.hpp  PopUpInputColor.hpp  PopUpInputDouble.hpp  PopUpInputString.hpp  PopUpInputUSize.hpp  PopUpManager.h  PopUpMessage.hpp  PopUpPlayerDelete.hpp  PopUpResultFight.hpp  PopUpResultGameEvent.hpp  PopUpSoundLeven.hpp  (+36 more)
src/ui_lib/: AbstactTableCell.cpp  Alignment.cpp  Button.cpp  ButtonClassic.cpp  ButtonExpanding.cpp  ButtonSlider.cpp  ButtonToggle.cpp  CMakeLists.txt  CheckBox.cpp  ClassicButton.cpp  ColorPicker.cpp  ColorPickerCell.cpp  CountingNumber.cpp  DropDown.cpp  DropDownElement.cpp  ExpandingButton.cpp  Focus.cpp  Focusable.cpp  Hover.cpp  HoverRender.cpp  InputLine.cpp  Line.cpp  LineDrag.cpp  NewInputLine.cpp  NewTable.cpp  NewTableCell.cpp  Picture.cpp  PopUp.cpp  PopUpInput.cpp  PopUpInputColor.cpp  PopUpInputDouble.cpp  PopUpInputString.cpp  PopUpInputUSize.cpp  PopUpMessage.cpp  PopUpValidate.cpp  Scene.cpp  SceneType.cpp  ShipCountRing.cpp  Slider.cpp  SliderButton.cpp  (+6 more)
src/ui_lib/include/ui_lib/: Alignment.hpp  Button.h  Button.hpp  ButtonClassic.hpp  ButtonExpanding.hpp  ButtonSlider.hpp  ButtonToggle.hpp  CheckBox.hpp  Focus.h  (+40 more)
src/utils/: CMakeLists.txt  Colors.cpp  FightResult.cpp  G_Save_Enum.cpp  MergeResult.cpp  ResultFight.cpp  ResultMerge.cpp  SaveState.cpp
(+77 files in other folders)
