add_library(ui STATIC
            include/ui/PopUpAll.hpp
            include/ui/SceneSettingsApp.hpp
            include/ui/PopUpCell.hpp
            include/ui/PopUpCellColor.hpp
            include/ui/HSceneCreditTable.hpp
            include/ui/SceneCredits.hpp
            include/ui/PopUpPlayerDelete.hpp
            include/ui/PopupResultFight.hpp
            include/ui/HSceneFleetTable.hpp
            include/ui/HSceneGalaxyAndSlider.hpp
            include/ui/HSceneGameEventSettings.hpp
            include/ui/SceneSettingsGame.hpp
            include/ui/SceneIntro.hpp
            include/ui/SceneLogos.hpp
            include/ui/SceneMainMenu.hpp
            include/ui/SceneMainScene.hpp
            include/ui/PopUpMessage.hpp
            include/ui/SceneNewGameParameter.hpp
            include/ui/SceneNewGamePlayer.hpp
            include/ui/HScenePlanetTable.hpp
            include/ui/ManagerPopUp.hpp
            include/ui/PrimitiveCellPopUp.hpp
            include/ui/ManagerScene.hpp
            include/ui/SceneAll.hpp
            include/ui/HSceneSettings.hpp
            include/ui/HSceneSliderAndInputLine.hpp
            include/ui/PopUpSoundLeven.hpp
            include/ui/HSceneTestScene.hpp
            include/ui/UIFleet.hpp
            include/ui/UIGalaxy.hpp
            include/ui/UIGalaxyElement.hpp
            include/ui/ManagerUI.hpp
            include/ui/UIPlanet.hpp
            include/ui/UITargetPoint.hpp
            include/ui/SceneUpdateEvaluation.hpp
            include/ui/SceneValidateGalaxy.hpp
            include/ui/PopUpValidate.hpp
            SeneSettingsApp.cpp
            PopUpCellColor.cpp
            HSceneCreditTable.cpp
            SceneCredits.cpp
            PopUpPlayerDelete.cpp
            PopupResultFight.cpp
            HSceneFleetTable.cpp
            HSceneGalaxyAndSlider.cpp
            HSceneGameEventSettings.cpp
            SceneSettingsGame.cpp
            SceneIntro.cpp
            SceneLogos.cpp
            SceneMainMenu.cpp
            SceneMainScene.cpp
            PopUpMessage.cpp
            SceneNewGameParameter.cpp
            SceneNewGamePlayer.cpp
            HScenePlanetTable.cpp
            ManagerPopUp.cpp
            ManagerScene.cpp
            HSceneSettings.cpp
            HSceneSliderAndInputLine.cpp
            PopUpSoundLevel.cpp
            HSceneTest.cpp
            UIFleet.cpp
            UIGalaxy.cpp
            UIGalaxyElement.cpp
            ManagerUI.cpp
            UIPlanet.cpp
            UITargetPoint.cpp
            SceneUpdateEvaluation.cpp
            SceneValidateGalaxy.cpp
            PopUpValidate.cpp
            PopUpCell.cpp
)

target_include_directories(ui
                           PRIVATE include/ui
                           INTERFACE include
)

target_link_libraries(ui
                      PRIVATE
                      helper
                      PUBLIC
                      app1
                      alias
                      logic
                      ui_lib
)