add_library(ui STATIC
            ../ui_lib/include/ui_lib/PopUpAll.hpp
            include/ui/SceneSettingsApp.hpp
            include/ui/HSceneCreditTable.hpp
            include/ui/SceneCredits.hpp
            include/ui/PopUpResultFight.hpp
            include/ui/HSceneFleetTable.hpp
            include/ui/HSceneGalaxyAndSlider.hpp
            include/ui/HSceneGameEventSettings.hpp
            include/ui/SceneSettingsGame.hpp
            include/ui/SceneIntro.hpp
            include/ui/SceneLogos.hpp
            include/ui/SceneMainMenu.hpp
            include/ui/SceneMainScene.hpp
            include/ui/SceneNewGameParameter.hpp
            include/ui/SceneNewGamePlayer.hpp
            include/ui/HScenePlanetTable.hpp
            include/ui/ManagerPopUp.hpp
            include/ui/ManagerScene.hpp
            include/ui/SceneAll.hpp
            include/ui/HSceneSettings.hpp
            include/ui/HSceneSliderAndInputLine.hpp
            include/ui/PopUpSoundLevel.hpp
            include/ui/HSceneTestScene.hpp
            include/ui/UIFleet.hpp
            include/ui/UIGalaxy.hpp
            include/ui/UIGalaxyElement.hpp
            include/ui/ManagerUI.hpp
            include/ui/UIPlanet.hpp
            include/ui/UITargetPoint.hpp
            include/ui/SceneUpdateEvaluation.hpp
            include/ui/SceneValidateGalaxy.hpp
            include/ui/PopUpExtra.hpp
            include/ui/PopUpResultGameEvent.hpp
            SceneSettingsApp.cpp
            HSceneCreditTable.cpp
            SceneCredits.cpp
            PopupResultFight.cpp
            HSceneFleetTable.cpp
            HSceneGalaxyAndSlider.cpp
            HSceneGameEventSettings.cpp
            SceneSettingsGame.cpp
            SceneIntro.cpp
            SceneLogos.cpp
            SceneMainMenu.cpp
            SceneMainScene.cpp
            SceneNewGameParameter.cpp
            SceneNewGamePlayer.cpp
            HScenePlanetTable.cpp
            ManagerPopUp.cpp
            ManagerScene.cpp
            HSceneSettings.cpp
            HSceneSliderAndInputLine.cpp
            PopUpSoundLevel.cpp
            HSceneTest.cpp
            UIFleet.cpp
            UIGalaxy.cpp
            UIGalaxyElement.cpp
            ManagerUI.cpp
            UIPlanet.cpp
            UITargetPoint.cpp
            SceneUpdateEvaluation.cpp
            SceneValidateGalaxy.cpp
            PopUpResultGameEvent.cpp
)

target_include_directories(ui
                           PRIVATE include/ui
                           INTERFACE include
)

target_link_libraries(ui
                      PRIVATE
                      helper
                      project_options
                      PUBLIC
                      app
                      alias
                      ui_lib
)